--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "tape": "^4.6.3"
   },
   "dependencies": {
+    "dockerode": "^2.3.1",
     "js-yaml": "^3.8.1",
     "minimist": "^1.2.0",
     "restify": "^4.3.0"
