--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "tape": "^4.6.3"
   },
   "dependencies": {
-    "dockerode": "^2.3.1",
-    "js-yaml": "^3.8.1",
-    "minimist": "^1.2.0",
-    "restify": "^4.3.0"
+    "dockerode": "2.3.1",
+    "js-yaml": "3.8.1",
+    "minimist": "1.2.0",
+    "restify": "4.3.0"
   }
 }
