--- a/package.json
+++ b/package.json
@@ -33,8 +33,15 @@
   },
   "dependencies": {
     "dockerode": "2.3.1",
+    "git-url-parse": "^6.2.0",
+    "github": "^8.2.1",
     "js-yaml": "3.8.1",
+    "keypair": "^1.0.1",
     "minimist": "1.2.0",
-    "restify": "4.3.0"
+    "node-forge": "^0.7.0",
+    "nodegit": "^0.17.0",
+    "restify": "4.3.0",
+    "ssh-url": "^0.1.5",
+    "uuid": "^3.0.1"
   }
 }
