--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An universal, deploy-anywhere CI/CD system backed by containers.",
   "main": "index.js",
   "scripts": {
-    "test": "tape 'test**/*.spec.js'"
+    "test": "npm run lint && tape 'test**/*.spec.js'",
+    "lint": "standard"
   },
   "bin": ".bin/nodeci",
   "repository": {
