extend from standard

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run lint && tape 'test**/*.spec.js'",
-    "lint": "standard"
+    "lint": "eslint ."
   },
   "bin": ".bin/nodeci",
   "repository": {
@@ -28,8 +28,11 @@
   },
   "homepage": "https://github.com/eljefedelrodeodeljefe/node-ci#readme",
   "devDependencies": {
+    "eslint": "^3.15.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.1",
+    "eslint-plugin-standard": "^2.0.1",
     "nodemon": "^1.11.0",
-    "standard": "^8.6.0",
     "tape": "^4.6.3"
   },
   "dependencies": {
