--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "minimist": "1.2.0",
     "node-forge": "^0.7.0",
     "nodegit": "^0.17.0",
-    "restify": "4.3.0",
+    "restify": "^4.3.0",
+    "restify-pino-logger": "^2.0.0",
     "socket.io": "^1.7.2",
     "ssh-url": "^0.1.5",
+    "swagger-jsdoc": "^1.9.1",
     "uuid": "^3.0.1"
   }
 }
