--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An universal, deploy-anywhere CI/CD system backed by containers.",
   "main": "index.js",
   "scripts": {
+    "example": "DEBUG=destackci:* nodemon example/programmtic.js",
     "test": "npm run lint && tape 'test**/*.spec.js'",
     "lint": "eslint ."
   },
@@ -39,6 +40,7 @@
     "body-parser": "^1.16.1",
     "connect-history-api-fallback": "^1.3.0",
     "cookie-parser": "^1.4.3",
+    "debug": "^2.6.1",
     "dockerode": "2.3.1",
     "express": "^4.14.1",
     "express-pino-logger": "^2.0.0",
